# bptreedb

./: .gitignore  CMakeLists.txt  ReadMe.txt  algorithm1.h  bptreedb.h  bptreedb.sln  bptreedb.vcxproj  bptreedb.vcxproj.filters  bptreedb_lib.h  stdafx.cpp  stdafx.h
BPTreeDatabase/: BPTreeDatabase.cpp  BPTreeDatabase.vcxproj  BPTreeDatabase.vcxproj.filters  DatabaseLog.h
BPTrees/: AllocsSet.cpp  AllocsSet.h  BPBaseTreeDelete.h  BPBaseTreeNode.cpp  BPBaseTreeNode.h  BPBaseTreeSearch.h  BPBaseTreeSet.h  BPBaseTreeSetCommon.h  BPBaseTreeSetInsert.h  BPIteratorMap.h  BPIteratorSet.h  BPMap.h  BPSMap.h  BPSet.h  BPTStringMapInnerNode.h  BPTStringMapLeafNode.h  BPTStringMapNodeHolder.h  BPTreeContext.cpp  BPTreeContext.h  BPTreeInnerNode.h  BPTreeLeafNode.h  BPTreeLeafNodeSet.h  BPTreeMapLeafNode.h  BPTreeNodeHolder.h  BPTreeNodeMapHolder.h  BPTreePerfCounter.h  BPTreeStatistics.h  BaseDIffEncoder.h  BaseEncoder.h  BaseLeafNodeSetCompressor.h  BaseNodeCompressor.h  EmptyEncoder.h  StringPageAlloc.cpp  StringPageAlloc.h  StringVal.cpp  StringVal.h
BPtree/: BPtree.cpp  BPtree.vcxproj  BPtree.vcxproj.filters
Test/TestBPTrees/: CMakeLists.txt  PerfLog.cpp  PerfLog.h  StringVectorFile.cpp  StringVectorFile.h  TestBPMap.cpp  TestBPSet.cpp  TestBPStringMap.cpp  TestBPTrees.cpp  TestBPTrees.vcxproj  TestBPTrees.vcxproj.filters  pch.h
Transaction/: Transaction.cpp  Transaction.h  Transaction.vcxproj  Transaction.vcxproj.filters  TransactionFilePager.cpp  TransactionFilePager.h  TransactionPage.cpp  TransactionPage.h  pch.h
bptreefs/: bptreefs.cpp  bptreefs.vcxproj  bptreefs.vcxproj.filters  pch.h
crypto/: PageCipher.h
database/: Variant.cpp
storage/: CacheStorage.h  FilePage.cpp  FilePage.h  FileStorage.cpp  FileStorage.h  PageMemoryBuffer.cpp  PageMemoryBuffer.h  PageObject.h  ReadStreamPage.cpp  ReadStreamPage.h  Storage.h  WriteStreamPage.cpp  WriteStreamPage.h  pch.h  storage.cpp  storage.h  storage.vcxproj  (+1 more)
utils/: BitUtils.h  (+13 more)
(+75 files in other folders)
